Added videogular player to the toolbar and wired any audio and video links to it.

--- a/src/assets/learn-wild.css
+++ b/src/assets/learn-wild.css
@@ -10,3 +10,11 @@ md-dialog-content.mat-dialog-content {
     font-family: Verdana;
     font-size: 12px;
 }
+
+.example-icon {
+  padding: 0 14px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
